message DataFrame {
        required string origin = 1;
        required string source = 2;
        required uint64 epoch = 3;

        required fixed64 timestamp = 4;

        enum Type {
                EMPTY = 0;
                NUMBER = 1;
                TEXT = 2;
                REAL = 3;
        }
        required Type   type = 6;

        optional int64  value_numeric = 7;
        optional string value_textual = 8;
        optional double value_measurement = 9;
}
